fixtures/vyper/simple/overflow/positive/u32.vy
#! {
#!   "modes": [
#!     "V >=0.4.0"
#!   ],
#!   "cases": [
#!     {
#!       "name": "default",
#!       "inputs": [
#!         {
#!           "method": "main",
#!           "calldata": [
#!             "4294967295"
#!           ],
#!           "caller": "0x611f8501aF218760B0abe8Edd79214Aa9107E5D3"
#!         }
#!       ],
#!       "expected": {
#!         "return_data": [],
#!         "exception": true
#!       }
#!     }
#!   ]
#! }

@external
@pure
def main(witness: uint32) -> uint32:
    return witness + 1
